--- a/examples/anchordocking/dockform2unit.lfm
+++ b/examples/anchordocking/dockform2unit.lfm
@@ -9,19 +9,15 @@ object DockFormX: TDockFormX
   Caption = 'DockFormX'
   ChildSizing.LeftRightSpacing = 1
   ChildSizing.TopBottomSpacing = 1
-  ClientHeight = 127
-  ClientWidth = 224
   OnCreate = FormCreate
   OnPaint = FormPaint
-  PixelsPerInch = 95
   PopupMenu = PopupMenu1
-  Visible = True
   object Button1: TButton
     Left = 24
     Height = 25
     Top = 48
     Width = 75
-    
+    BorderSpacing.InnerBorder = 4
     Caption = 'Button1'
     TabOrder = 0
   end
@@ -32,8 +28,6 @@ object DockFormX: TDockFormX
     Width = 105
     Align = alRight
     Caption = 'GroupBox1'
-    ClientHeight = 108
-    ClientWidth = 101
     TabOrder = 1
   end
   object PopupMenu1: TPopupMenu
